# Trade-otomatis-deriv

./: .dockerignore  .gitignore  .replit  DEPLOY_KOYEB.md  check_contracts.py  deriv_ws.py  event_bus.py  keep_alive.py  koyeb.yaml  main.py  pair_scanner.py  pyproject.toml  replit.md  requirements.txt  strategy.py  test_real_trade.py  test_strategy.py  trading.py  user_auth.py  web_server.py
attached_assets/: Pasted-Ada-2-bug-kritis-yang-perlu-diperbaiki-di-bot-trading-D_1764918072387.txt  Pasted-Anda-adalah-AI-expert-dalam-optimasi-strategi-trading-T_1765017558848.txt  Pasted-Bertindaklah-sebagai-Senior-Algorithmic-Trader-Backend-_1764909282232.txt  Pasted-Bertindaklah-sebagai-Senior-Python-Developer-Saya-memil_1764916481074.txt  Pasted-DAFTAR-FILE-YANG-MEMERLUKAN-PERBAIKAN-1-strategy-py-MAS_1764934055894.txt  Pasted-PROMPT-KOMPREHENSIF-UNTUK-PERBAIKAN-BOT-TRADING-DERIV-P_1764926506582.txt  Pasted-PROMPT-PERBAIKAN-BOT-TRADING-DERIV-FASE-2-INSTRUKS-1764_1764937183679.txt  Pasted-PROMPT-UNTUK-PERBAIKAN-BOT-TRADING-DERIV-PRIORITAS-TING_1764919533149.txt  Pasted-TASK-Fix-Deriv-Trading-Bot-ADX-Filter-Confluence-Thresh_1764975697675.txt
static/: dashboard.js  index.html  style.css
